# cugparck

./: .gitignore  Cargo.toml  LICENSE.md  README.md  Untitled  \  module.spv
.config/: nextest.toml
.github/workflows/: ci.yml  release.yml  tests.yml
.github/workfows/: ci.yml
cli/: Cargo.toml
cli/src/: attack.rs  compress.rs  decompress.rs  generate.rs  main.rs  stealdows.rs
commons/: Cargo.toml
commons/src/: lib.rs  ntlm.rs
core/: Cargo.toml
core/src/: cpu.rs  ctx.rs  cube.rs  error.rs  event.rs  hash.rs  lib.rs  ntlm.rs  producer.rs  rainbow_chain_map.rs  rainbow_table.rs  scheduling.rs  utils.rs
core/src/cube/: compute.rs  hash.rs
core/src/cube/hash/: md4.rs  ntlm.rs  utils.rs
core/src/hash/: ntlm.rs
core/src/rainbow_table/: cluster.rs  compressed.rs  simple.rs
cpu/: Cargo.toml  build.rs
cpu/src/: backend.rs  batch.rs  bitvec_wrapper.rs  error.rs  event.rs  lib.rs  rainbow_table.rs  renderer.rs  table_cluster.rs
cpu/src/backend/: cpu.rs  cuda.rs
cpu/src/rainbow_table/: compressed_delta_encoding.rs  simple.rs
cpu/src/renderer/: cpu.rs  cuda.rs  wgpu.rs
cubecl/: Cargo.toml
cubecl/src/: lib.rs
cuda/: Cargo.toml
cuda/src/: lib.rs
cuda_build/: Cargo.toml
cuda_build/src/: main.rs
gpu/: Cargo.toml
gpu/src/: lib.rs
resources/: module.ptx
spirv/: Cargo.toml
spirv/src/: lib.rs
spirv_build/: Cargo.toml  err.txt
spirv_build/src/: main.rs
