[package]
name = "cugparck-cli"
version = "0.4.3"
edition = "2021"

[dependencies]
cugparck-core = { path = "../core" }
cugparck-cpu = { path = "../cpu" }
anyhow = "1.0.58"
hex = "0.4.3"
clap = { version = "3.2.8", features = ["derive"] }
indicatif = "0.17.0"
crossterm = "=0.25.0"
comfy-table = "=6.1.0"
nt-hive = { git = "https://github.com/ColinFinck/nt-hive" }
md-5 = "0.10.1"
rc4 = "0.1.0"
des = "0.8.1"
aes = "0.8.1"
cbc = "0.1.2"
bincode = "1.3.3"
