[package]
name = "cugparck-cli"
version = "0.4.3"
edition = "2021"

[profile.profiling]
inherits = "release"
debug = true

[dependencies]
cugparck-core = { path = "../core" }
anyhow = "1.0.58"
hex = "0.4.3"
clap = { version = "4.5.27", features = ["derive"] }
indicatif = "0.17.0"
crossterm = "0.28.1"
comfy-table = "7.1.3"
nt-hive = { git = "https://github.com/ColinFinck/nt-hive" }
md-5 = "0.10.6"
rc4 = "0.1.0"
des = "0.8.1"
aes = "0.8.4"
cbc = "0.1.2"
bincode = "1.3.3"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "sync"] }
