[package]
name = "cugparck-commons"
version = "0.3.0"
edition = "2021"

[target.'cfg(not(any(target_os = "cuda", target_arch = "spirv")))'.dependencies]
nohash-hasher = "0.2.0"
bytecheck = "0.6.8"
rkyv = { version = "0.7.39", default-features = false, features = ["std", "validation", "size_64", "tinyvec"] }

[dependencies]
bytemuck = { version = "1.12.1", features = ["derive"] }
cust_core = { version = "0.1.1", optional = true } 
tinyvec = { version = "1.6.0", features = ["rustc_1_57"] }

md4 = { version = "0.10.1", default-features = false }
md-5 = { version = "0.10.1", default-features = false }
sha-1 = { version = "0.10.0", default-features = false }
sha2 = { version = "0.10.2", default-features = false }
sha3 = { version = "0.10.1", default-features = false }

[features]
cuda = ["cust_core"]