[package]
name = "cugparck-commons"
version = "0.4.3"
edition = "2021"

[target.'cfg(not(any(target_os = "cuda", target_arch = "spirv")))'.dependencies]
nohash-hasher = "0.2.0"
bytecheck = "0.6.8"
rkyv = { git = "https://github.com/rkyv/rkyv", default-features = false, features = ["std", "validation", "size_64", "tinyvec", "copy_unsafe", "bitvec_alloc", "indexmap"] }

[dependencies]
tinyvec = { version = "1.6.0", features = ["rustc_1_57"] }
md4 = { version = "0.10.1", default-features = false }
md-5 = { version = "0.10.1", default-features = false }
sha-1 = { version = "0.10.0", default-features = false }
sha2 = { version = "0.10.2", default-features = false }
sha3 = { version = "0.10.1", default-features = false }

# cuda
cust_core = { version = "0.1.1", optional = true } 

# wgpu
bytemuck = { version = "1.12.1", features = ["derive"], optional = true }

[features]
cuda = ["cust_core"]
wgpu = ["bytemuck"]