[package]
name = "cugparck-core"
version = "0.4.3"
edition = "2021"


[dependencies]
nohash-hasher = "0.2.0"
md4 = { version = "0.10.1", default-features = false }
md-5 = { version = "0.10.1", default-features = false }
sha-1 = { version = "0.10.0", default-features = false }
sha2 = { version = "0.10.2", default-features = false }
sha3 = { version = "0.10.1", default-features = false }
thiserror = "1.0.24"
bitvec = { version = "1.0.0", features = ["serde"] }
rayon = "1.5.3"
indexmap = { git = "https://github.com/truelossless/indexmap", features = [
  "rayon",
  "serde",
] }
crossbeam-channel = "0.5.5"
itertools = "0.10.3"
cubecl = { git = "https://github.com/tracel-ai/cubecl", default-features = false, features = [
  "cuda",
  "wgpu",
] }
cubecl-cuda = { git = "https://github.com/tracel-ai/cubecl", default-features = false }
cubecl-runtime = { git = "https://github.com/tracel-ai/cubecl", default-features = true }
serde = { version = "1.0.217", features = ["derive"] }
