[package]
name = "cugparck-core"
version = "0.4.3"
edition = "2021"

[dependencies]
md4 = { version = "0.10.2", default-features = false }
md-5 = { version = "0.10.6", default-features = false }
sha-1 = { version = "0.10.1", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
thiserror = "2.0.11"
bitvec = { version = "1.0.1", features = ["serde"] }
rayon = "1.10.0"
itertools = "0.14.0"
cubecl = { git = "https://github.com/tracel-ai/cubecl", default-features = false, features = [
  "cuda",
  "wgpu",
] }
cubecl-cuda = { git = "https://github.com/tracel-ai/cubecl", default-features = false }
cubecl-wgpu = { git = "https://github.com/tracel-ai/cubecl", default-features = false, features = [
  "spirv",
] }
cubecl-runtime = { git = "https://github.com/tracel-ai/cubecl", default-features = true }
serde = { version = "1.0.217", features = ["derive"] }
arrayvec = "0.7.6"
bincode = "1.3.3"
digest = "0.10.7"
