[package]
name = "cugparck-cpu"
version = "0.4.3"
edition = "2021"

[dependencies]
cugparck-cubecl = { path = "../cubecl" }
cugparck-core = { path = "../core" }
thiserror = "1.0.24"
bitvec = { version = "1.0.0", features = ["serde"] }
rayon = "1.5.3"
indexmap = { git = "https://github.com/truelossless/indexmap", features = [
  "rayon",
  "serde",
] }
crossbeam-channel = "0.5.5"
itertools = "0.10.3"
nohash-hasher = "0.2.0"
cubecl = { git = "https://github.com/tracel-ai/cubecl", default-features = false, features = [
  "cuda",
  "wgpu",
] }
cubecl-cuda = { git = "https://github.com/tracel-ai/cubecl", default-features = false }
cubecl-runtime = { git = "https://github.com/tracel-ai/cubecl", default-features = true }
serde = { version = "1.0.217", features = ["derive"] }
bincode = "1.3.3"
