[package]
name = "cugparck-cubecl"
version = "0.1.0"
edition = "2021"

[dependencies]
cubecl = { git = "https://github.com/tracel-ai/cubecl", default-features = false, features = [
    "cuda",
    "wgpu",
] }
cubecl-cuda = { git = "https://github.com/tracel-ai/cubecl", default-features = false }
cubecl-runtime = { git = "https://github.com/tracel-ai/cubecl", default-features = true }
cudarc = { version = "0.12.1", default-features = false, features = [
    "std",
    "driver",
    "cuda-12030",
] }
cugparck-core = { path = "../core" }
